Azure/terraform-code/high-cpu-ss/core-network/pip.tf
resource "azurerm_public_ip" "pip" {
  name                = join("", [var.service, "pip", local.name-suffix])
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location
  allocation_method   = "Dynamic"
}
