Azure/terraform-code/high-cpu-ss/core-network/nsg.tf
resource "azurerm_network_security_group" "nsg" {
  name                = join("-", [var.service, "nsg", local.name-suffix])
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  security_rule {
    name                       = "AllowRDP"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name = "AllowHTTPs"
    priority = 110
    direction = "Inbound"
    access = "Allow"
    protocol = "tcp"
    source_port_range = "*"
    destination_port_range = "443"
    source_address_prefix = "*"
    destination_address_prefix = "*"
  }
}
